--- a/Ecommerce_app/macos/Runner/GoogleService-Info.plist
+++ b/Ecommerce_app/macos/Runner/GoogleService-Info.plist
@@ -9,7 +9,7 @@
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>com.example.sevenSteps.RunnerTests</string>
+	<string>com.example.ecommerce.RunnerTests</string>
 	<key>PROJECT_ID</key>
 	<string>ecommerce-1531a</string>
 	<key>STORAGE_BUCKET</key>
