--- a/Ecommerce_app/ios/Runner/GoogleService-Info.plist
+++ b/Ecommerce_app/ios/Runner/GoogleService-Info.plist
@@ -9,7 +9,7 @@
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>com.example.sevenSteps</string>
+	<string>com.example.ecommerce</string>
 	<key>PROJECT_ID</key>
 	<string>seven-steps-eb126</string>
 	<key>STORAGE_BUCKET</key>
