--- a/Ecommerce_app/ios/firebase_app_id_file.json
+++ b/Ecommerce_app/ios/firebase_app_id_file.json
@@ -1,7 +1,7 @@
 {
   "file_generated_by": "FlutterFire CLI",
   "purpose": "FirebaseAppID & ProjectID for this Firebase app in this directory",
-  "GOOGLE_APP_ID": "1:686677645855:ios:4bc02add676edb275a132a",
-  "FIREBASE_PROJECT_ID": "mobile-project-7ae4c",
-  "GCM_SENDER_ID": "686677645855"
+  "GOOGLE_APP_ID": "1:668489064929:ios:967a6b4ccef0943c8932a0",
+  "FIREBASE_PROJECT_ID": "zevils-5a935",
+  "GCM_SENDER_ID": "668489064929"
 }
