--- a/Ecommerce_app/macos/firebase_app_id_file.json
+++ b/Ecommerce_app/macos/firebase_app_id_file.json
@@ -1,7 +1,7 @@
 {
   "file_generated_by": "FlutterFire CLI",
   "purpose": "FirebaseAppID & ProjectID for this Firebase app in this directory",
-  "GOOGLE_APP_ID": "1:162966731709:ios:1f7445647773cbcec830d4",
-  "FIREBASE_PROJECT_ID": "ecommerce-1531a",
-  "GCM_SENDER_ID": "162966731709"
+  "GOOGLE_APP_ID": "1:668489064929:ios:48c475dc729b49448932a0",
+  "FIREBASE_PROJECT_ID": "zevils-5a935",
+  "GCM_SENDER_ID": "668489064929"
 }
